# dalvik

./: .appveyor.yml  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  aliases.js  clippy.toml  contributing.md  index.html  search-index.js  settings.html  source-files.js  test.dex  travis-helper.sh
backtrace_sys/: enum.backtrace_state.html  fn.backtrace_create_state.html  fn.backtrace_pcinfo.html  fn.backtrace_syminfo.html  type.backtrace_error_callback.html  type.backtrace_full_callback.html  type.backtrace_syminfo_callback.html
dalvik/: Dex.t.html  all.html  index.html  sidebar-items.js  struct.Class.html  struct.Dex.html  struct.Field.html  struct.Method.html
dalvik/bytecode/: ArrayOperation.t.html  BinaryOperation.t.html  ByteCode.t.html  ByteCodeDecoder.t.html  CallSiteReference.t.html  ClassReference.t.html  CompareType.t.html  FieldReference.t.html  InvokeKind.t.html  MethodReference.t.html  PrototypeReference.t.html  StringReference.t.html  TestType.t.html  TypeReference.t.html  UnaryOperation.t.html  enum.ArrayOperation.html  enum.BinaryOperation.html  enum.ByteCode.html  enum.CompareType.html  enum.InvokeKind.html  enum.TestType.html  enum.UnaryOperation.html  index.html  sidebar-items.js  (+8 more)
examples/: java_gen.rs
libc/: constant.ARPHRD_ADAPT.html  constant.ARPHRD_APPLETLK.html  constant.ARPHRD_ARCNET.html  constant.ARPHRD_ASH.html  constant.ARPHRD_ATM.html  constant.ARPHRD_AX25.html  constant.ARPHRD_BIF.html  constant.ARPHRD_CHAOS.html  constant.ARPHRD_CISCO.html  constant.ARPHRD_CSLIP.html  constant.ARPHRD_CSLIP6.html  constant.ARPHRD_DDCMP.html  constant.ARPHRD_DLCI.html  constant.ARPHRD_ECONET.html  constant.ARPHRD_EETHER.html  constant.ARPHRD_ETHER.html  constant.ARPHRD_EUI64.html  constant.ARPHRD_FCAL.html  constant.ARPHRD_FCFABRIC.html  constant.ARPHRD_FCPL.html  constant.ARPHRD_FCPP.html  constant.ARPHRD_FDDI.html  constant.ARPHRD_FRAD.html  constant.ARPHRD_HDLC.html  constant.ARPHRD_HIPPI.html  constant.ARPHRD_HWX25.html  constant.ARPHRD_IEEE1394.html  constant.ARPHRD_IEEE802.html  constant.ARPHRD_IEEE80211.html  constant.ARPHRD_IEEE80211_PRISM.html  constant.ARPHRD_IEEE80211_RADIOTAP.html  constant.ARPHRD_IEEE802154.html  constant.ARPHRD_IEEE802_TR.html  constant.ARPHRD_INFINIBAND.html  constant.ARPHRD_IPDDP.html  constant.ARPHRD_IPGRE.html  constant.ARPHRD_IRDA.html  constant.ARPHRD_LAPB.html  constant.ARPHRD_LOCALTLK.html  constant.ARPHRD_LOOPBACK.html  (+911 more)
src/: bytecode.rs  error.rs  header.rs  lib.rs  offset_map.rs  read.rs  sizes.rs  types.rs
src/bytecode/: mod.rs
tests/: lib.rs
(+277 files in other folders)
