[package]
name = "dalvik"
version = "0.1.0-dev"
authors = ["Razican <razican@protonmail.ch>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/SUPERAndroidAnalyzer/dalvik"
documentation = "http://superanalyzer.rocks/dalvik"
description = """
Dalvik parser in pure Rust.
"""
keywords = ["dalvik", "parser", "android", "dex"]
categories = ["parser-implementations"]

[badges]
travis-ci = { repository = "SUPERAndroidAnalyzer/dalvik", branch = "master" }
appveyor = { repository = "Razican/dalvik", branch = "master", service = "github" }

[dependencies]
byteorder = "1.2.6"
bitflags = "1.0.4"
failure = "0.1.2"
failure_derive = "0.1.2"

[dev-dependencies]
matches = "0.1.8"

[features]
default = []
debug = []
