[package]
name = "dalvik"
version = "0.1.0-dev"
authors = ["Razican <razican@protonmail.ch>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/SUPERAndroidAnalyzer/dalvik"
documentation = "http://superanalyzer.rocks/dalvik"
description = "Dalvik parser in pure Rust."
keywords = ["dalvik", "parser", "android", "dex"]
categories = ["parser-implementations"]

[badges]
travis-ci = { repository = "SUPERAndroidAnalyzer/dalvik", branch = "master" }
codecov = { repository = "SUPERAndroidAnalyzer/dalvik", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "SUPERAndroidAnalyzer/dalvik" }
is-it-maintained-open-issues = { repository = "SUPERAndroidAnalyzer/dalvik" }
maintenance = { status = "experimental" }

[dependencies]
byteorder = "1.3.4"
bitflags = "1.2.1"
anyhow = "1.0.27"

[features]
default = []
debug = []
